[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprite/assets_space_shooter_2d/assets/backgrounds/blue.png" type="Texture" id=2]
[ext_resource path="res://sprite/assets_space_shooter_2d/assets/audio/explode.wav" type="AudioStream" id=3]
[ext_resource path="res://scene/Spawn_Container.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/Game.gd" type="Script" id=5]
[ext_resource path="res://scene/UI.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 410, 385 )

[node name="Spawn_Container" parent="." instance=ExtResource( 4 )]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="UI" parent="HUD" instance=ExtResource( 6 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1025.0
margin_bottom = 602.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="took_damage" from="Player" to="." method="_on_Player_took_damage"]
[connection signal="spawn_enemy" from="Spawn_Container" to="." method="_on_Spawn_Container_spawn_enemy"]
